--- a/blog/templates/blog/all_blogs.html
+++ b/blog/templates/blog/all_blogs.html
@@ -6,7 +6,7 @@
 
 <h1 id="blogtitle" class="font-weight-bold text-center">Blog</h1>
 
-<h3 class="text-center mb-5">Galya has written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h3>
+<h3 class="text-center mb-5">Ksenia has written {{ blogs.count }} blog{{ blogs.count|pluralize }}</h3>
 
 {% for blog in blogs %}
 <div class="row justify-content-center my-3">
